--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h2 class="text-5xl md:text-6xl font-extrabold slide-header mb-4">ZenVault AI Labs - Development Repositories</h2>
                 <p class="text-2xl md:text-3xl slide-subheader">Engineering Intelligence. Forging the Future.</p>
                 <div class="mt-8 border-t pt-6 text-lg text-slate-600 space-y-2">
-                    <p>We are a premier AI consultancy founded by leading technologists, specializing in building bespoke Generative AI solutions that drive tangible business outcomes.</p>
+                    <p>ZenVaultAI is an innovative B2B consultancy focused on helping businesses leverage the power of artificial intelligence. Our niche is providing approachable and results-driven AI solutions. We're launching with a unique strategy: demonstrating undeniable value upfront with our AI-powered travel app, and then offering our comprehensive consultancy services at an accessible price point to foster long-term partnerships. We're not just about cutting-edge tech; we're about building a strong client portfolio and proving ROI from day one.</p>
                     <p>We transform complex data into strategic assets, moving your business from potential to profit.</p>
                 </div>
             </section>
